fixed cursor z-index issue

--- a/APP/src/styles/overlay.css
+++ b/APP/src/styles/overlay.css
@@ -24,7 +24,7 @@
     background-color: white;
     border-radius: 50%;
     pointer-events: none;
-    z-index: 9000;
+    z-index: 10000;
     transform: translate(-50%, -50%);
     transition: width 0.15s ease, height 0.15s ease; 
 }
